layout tweaking on contacts page, added content

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,10 @@
 
     <h2 class="contact">Contact Me</h2>
 
+    <div class="mobile">587-664-4030</div>
+    <div class="mobile">peter.zay@gmail.com</div>
+
+
     <div class="contact-icons">
 
         <div class="ci-3">
