--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 <body class="projects-body">
 
     <div class="navbar">
-        <div class="brand">Peter Zay <span id="mobile">587.664.4030</span></div>
+        <div class="brand">Peter Zay</div>
 
         <a href="index.html" class="nav-link">About Me</a>
         <a href="projects.html" class="nav-link">Projects</a>
