styling updates to contact

--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
         <a href="contact.html" class="nav-link">Contact</a>
     </div>
 
-    <h2 class="mobile">Contact Me</h2>
+    <h2 class="contact">Contact Me</h2>
 
-    <div class="mobile">587-664-4030</div>
-    <div class="mobile">peter.zay@gmail.com</div>
+    <div class="contact">587-664-4030</div>
+    <div class="contact">peter.zay@gmail.com</div>
 
 
     <div class="contact-icons">
