fixed graham title

--- a/projects.html
+++ b/projects.html
@@ -150,7 +150,7 @@
                         <li><strong>Name:</strong> Vancouver Airport</li>
                         <li><strong>Location:</strong> Vancouver, BC</li>
                         <li><strong>Description:</strong> International Airport Expansion</li>
-                        <li><strong>Role:</strong> Project Manager</li>
+                        <li><strong>Role:</strong> Senior PC</li>
                     </ul>
                 </div>
             </div>
