fixed graham title

--- a/projects.html
+++ b/projects.html
@@ -149,7 +149,7 @@
                         <li><strong>Year:</strong> 2012</li>
                         <li><strong>Name:</strong> Vancouver Airport</li>
                         <li><strong>Location:</strong> Vancouver, BC</li>
-                        <li><strong>Description:</strong> International Airport Expansion</li>
+                        <li><strong>Description:</strong> Various YVR Airport Improvements</li>
                         <li><strong>Role:</strong> Senior PC</li>
                     </ul>
                 </div>
